charon/tests/ui/vec-reconstruct-nested.rs
fn nested_vecs() {
    let _nested = vec![vec![1u8], vec![2u8]];
}

fn nested_single() {
    let _nested = vec![vec![1u8]];
}
